--- a/Frontend_ss/index.html
+++ b/Frontend_ss/index.html
@@ -2,9 +2,9 @@
 <html data-theme="dracula" lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/Frontend_ss/src/assets/play.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>SS Music</title>
   </head>
   <body>
     <div id="root"></div>
