--- a/Frontend_ss/index.html
+++ b/Frontend_ss/index.html
@@ -2,7 +2,7 @@
 <html data-theme="dracula" lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/Frontend_ss/src/assets/play.png" />
+    <link rel="icon" type="image/png" href="/play.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SS Music</title>
   </head>
